elastic-stack-helm/apm-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: elk
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/scheme: internet
    alb.ingress.kubernetes.io/target-type: ip
  finalizers:
  - group.ingress.k8s.aws/elk
  generation: 1
  name: apm
  namespace: elk
spec:
  ingressClassName: aws-alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: apm-apm-server
            port:
              number: 8200
        path: /*
        pathType: ImplementationSpecific
