elastic-stack-helm/ing-elk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  finalizers:
  - group.ingress.k8s.aws/elk
  generation: 1
  name: elasticsearch
  namespace: helm-test
spec:
  ingressClassName: aws-alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: elasticsearch-master
            port:
              number: 9200
        path: /*
        pathType: ImplementationSpecific
